--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,4 +2,5 @@ include LICENSE
 include README.md
 recursive-include selia_maps/static *
 recursive-include selia_maps/templates *
+recursive-include selia_maps/locale *
 recursive-include docs *
